noinst_LIBRARIES = lib_common.a

lib_common_a_SOURCES = \
	common.h \
	error.c \
	error.h \
	hmap.c \
	hmap.h \
	io-utils.c \
	io-utils.h \
	intutil.c \
	intutil.h \
	iterator.c \
	iterator.h \
	llist.c \
	llist.h \
	strbuf.c \
	strbuf.h \
	string-utils.c \
	string-utils.h \
	regex-utils.c \
	regex-utils.h

AM_CPPFLAGS = \
	-I$(top_srcdir)/lib \
	-I$(top_builddir)/lib

AM_CFLAGS = -Wall
