EXTRA_DIST = \
	include/e35styles \
	e02.rules e02.in e02.out \
	e09.rules e09.in e09.out \
	e10.rules e10.in e10.out \
	e11.rules e11.in e11.out \
	e12.rules e12.in e12.out \
	e13.rules e13.in e13.out \
	e14.rules e14.in e14.out \
	e15.rules e15.in e15.out \
	e16.rules e16.in e16.out \
	e17.rules e17.in e17.out \
	e18.rules e18.in e18.out \
	e19.rules e19.in e19.out \
	e20.rules e20.in e20.out \
	e21.rules e21.in e21.out \
	e22.rules e22.in e22.out \
	e23.rules e23.in e23.out \
	e24.rules e24.in e24.out \
	e25.rules e25.in e25.out \
	e26.rules e26.in e26.out \
	e27.rules e27.in e27.out \
	e28.rules e28.in e28.out \
	e29.rules e29.in e29.out \
	e30.rules e30.in e30.out \
	e32.rules e32.in e32.out \
	e33.rules e33.in e33.out \
	e34.rules e34.in e34.out \
	e35.rules e35.in e35.out \
	e36.rules e36.in e36.out \
	e37.rules e37.in e37.out \
	e38.rules e38.in e38.out \
	e41.rules e41.in e41.out \
	e42.rules e42.in e42.out \
	e43.rules e43.in e43.out \
	e44.rules e44.in e44.out \
	e45.rules e45.in e45.out \
	e46.rules e46.in e46.out \
	e47.rules e47.in e47.out \
	e48.rules e48.in e48.out \
	e49.rules e49.in e49.out \
	e50.rules e50.in e50.out \
	e51.rules e51.in e51.out \
	e52.rules e52.in e52.out \
	e53.rules e53.in e53.out \
	e54.rules e54.in e54.out \
	e55.rules e55.in e55.out \
	e56.rules e56.in e56.out \
	e57.rules e57.in e57.out \
	e58.rules e58.in e58.out \
	e59.rules e59.in e59.out \
	e60.rules e60.in e60.out \
	e61.rules e61.in e61.out \
	e62.rules e62.in e62.out \
	e63.rules e63.in e63.out \
	e64.rules e64.in e64.out \
	e65.rules e65.in e65.out \
	e66.rules e66.in e66.out \
	e67.rules e67.in e67.out \
	e68.rules e68.in e68.out \
	e69.rules e69.in e69.out \
	e70.rules e70.in e70.out \
	e71.rules e71.in e71.out \
	e72.rules e72.in e72.out \
	e73.rules e73.in e73.out \
	e74.rules e74.in e74.out \
	e75.rules e75.in e75.out \
	e76.rules e76.in e76.out \
	e77.rules e77.in e77.out \
	e78.rules e78.in e78.out \
	e79.rules e79.in e79.out \
	e80.rules e80.in e80.out \
	e81.rules e81.in e81.out \
	e82.rules e82.in e82.out \
	e83.rules e83.in e83.out \
	e84.rules e84.in e84.out \
	e85.rules e85.in e85.out \
	e86.rules e86.in e86.out \
	e52color.rules e52color.in e52color.out \
	e53color.rules e53color.in e53color.out \
	e59color.rules e59color.in e59color.out \
	bug01.rules bug01.in bug01.out \
	bug02.rules bug02.in bug02.out \
	bug03.rules bug03.in bug03.out \
	bug04.rules bug04.in bug04.out \
	bug05.rules bug05.in bug05.out \
	f01.rules f01.in f01.out f01.opts \
	f02.rules f02.in f02.out f02.opts \
	f03.rules f03.in f03.out f03.opts \
	f04.rules f04.in f04.out f04.opts \
	f05.rules f05.in f05.out f05.opts \
	f06.rules f06.in f06.out f06.opts \
	f07.rules f07.in f07.out f07.opts \
	f08.rules f08.in f08.out f08.opts \
	f09.rules f09.in f09.out f09.opts \
	f10.rules f10.in f10.out f10.opts \
	f11.rules f11.in f11.out f11.opts \
	f12.rules f12.in f12.out f12.opts \
	f13.rules f13.in f13.out f13.opts \
	f14.rules f14.in f14.out f14.opts \
	f15.rules f15.in f15.out f15.opts \
	f16.rules f16.in f16.out f16.opts \
	f17.rules f17.in f17.out f17.opts \
	f18.rules f18.in f18.out f18.opts \
	f19.rules f19.in f19.out f19.opts \
	f20.rules f20.in f20.out f20.opts \
	f21.rules f21.in f21.out f21.opts \
	f22.rules f22.in f22.out f22.opts \
	verify

TESTS = \
	e02.rules \
	e09.rules \
	e10.rules \
	e11.rules \
	e12.rules \
	e13.rules \
	e14.rules \
	e15.rules \
	e16.rules \
	e17.rules \
	e18.rules \
	e19.rules \
	e20.rules \
	e21.rules \
	e22.rules \
	e23.rules \
	e24.rules \
	e25.rules \
	e26.rules \
	e27.rules \
	e28.rules \
	e29.rules \
	e30.rules \
	e32.rules \
	e33.rules \
	e34.rules \
	e35.rules \
	e36.rules \
	e37.rules \
	e38.rules \
	e41.rules \
	e42.rules \
	e43.rules \
	e44.rules \
	e45.rules \
	e46.rules \
	e47.rules \
	e48.rules \
	e49.rules \
	e50.rules \
	e51.rules \
	e52.rules \
	e53.rules \
	e54.rules \
	e55.rules \
	e56.rules \
	e57.rules \
	e58.rules \
	e59.rules \
	e60.rules \
	e61.rules \
	e62.rules \
	e63.rules \
	e64.rules \
	e65.rules \
	e66.rules \
	e67.rules \
	e68.rules \
	e69.rules \
	e70.rules \
	e71.rules \
	e72.rules \
	e73.rules \
	e74.rules \
	e75.rules \
	e76.rules \
	e77.rules \
	e78.rules \
	e79.rules \
	e80.rules \
	e81.rules \
	e82.rules \
	e83.rules \
	e84.rules \
	e85.rules \
	e86.rules \
	e52color.rules \
	e53color.rules \
	e59color.rules \
	bug01.rules \
	bug02.rules \
	bug03.rules \
	bug04.rules \
	bug05.rules \
	f01.rules \
	f02.rules \
	f03.rules \
	f04.rules \
	f05.rules \
	f06.rules \
	f07.rules \
	f08.rules \
	f09.rules \
	f10.rules \
	f11.rules \
	f12.rules \
	f13.rules \
	f14.rules \
	f15.rules \
	f16.rules \
	f17.rules \
	f18.rules \
	f19.rules \
	f20.rules \
	f21.rules \
	f22.rules

TESTS_ENVIRONMENT = $(srcdir)/verify -q
